feat: integrate DOMPurify for XSS protection in email previews
- Added DOMPurify to sanitize HTML content in email queue and templates to prevent XSS attacks.
- Implemented user authentication checks in equipment bookings API routes to enhance security.
- Introduced role-based access control for booking modifications and deletions.
- Created a comprehensive code review prompt for systematic analysis of the codebase.
- Added utility functions for user role verification and zone/club checks.
- Documented XSS protection testing procedures and success criteria.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "next dev -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "postbuild": "node scripts/copy-public-to-standalone.js",
@@ -70,6 +69,7 @@
     "firebase-admin": "^12.7.0",
     "genkit": "^1.16.0",
     "helmet": "^8.1.0",
+    "isomorphic-dompurify": "^2.33.0",
     "jose": "^6.1.0",
     "jotai": "^2.8.3",
     "jspdf": "^3.0.2",
